--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.16.1"
+    "rollup": "4.22.4"
   }
 }
